RESOLVED FIXED87780
[BlackBerry] WebOverlay build fixes and bug fixes
https://bugs.webkit.org/show_bug.cgi?id=87780
Summary [BlackBerry] WebOverlay build fixes and bug fixes
Arvid Nilsson
Reported 2012-05-29 14:35:51 PDT
Various build fixes for configurations (AC disabled, debug mode) I hadn't tested, and a bug fix due to a typo
Attachments
Patch (5.55 KB, patch)
2012-05-29 14:42 PDT, Arvid Nilsson
no flags
Patch (5.50 KB, patch)
2012-05-29 15:30 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-05-29 14:42:09 PDT
Arvid Nilsson
Comment 2 2012-05-29 14:49:48 PDT
Reviewed internally by Mike Fenton
Rob Buis
Comment 3 2012-05-29 14:50:59 PDT
Comment on attachment 144625 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=144625&action=review > Source/WebKit/blackberry/ChangeLog:1 > +2012-05-29 commit-queue@webkit.org <commit-queue@webkit.org@268f45cc-cd09-0410-ab3c-d52691b4dbfc> The above line seems wrong, please provide a correct author, i.e. you :)
Arvid Nilsson
Comment 4 2012-05-29 15:28:34 PDT
(In reply to comment #3) > (From update of attachment 144625 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=144625&action=review > > > Source/WebKit/blackberry/ChangeLog:1 > > +2012-05-29 commit-queue@webkit.org <commit-queue@webkit.org@268f45cc-cd09-0410-ab3c-d52691b4dbfc> > > The above line seems wrong, please provide a correct author, i.e. you :) That's very odd, fixing...
Arvid Nilsson
Comment 5 2012-05-29 15:30:21 PDT
Rob Buis
Comment 6 2012-05-29 15:32:30 PDT
Comment on attachment 144634 [details] Patch Looks good.
WebKit Review Bot
Comment 7 2012-05-29 16:12:57 PDT
Comment on attachment 144634 [details] Patch Clearing flags on attachment: 144634 Committed r118850: <http://trac.webkit.org/changeset/118850>
WebKit Review Bot
Comment 8 2012-05-29 16:13:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.