[BlackBerry] WebOverlay build fixes and bug fixes https://bugs.webkit.org/show_bug.cgi?id=87780

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-05-29
Reviewed by Rob Buis.

Fix build when accelerated compositing disabled, or debug build.

Also fix a bug where the selection overlay would not disappear properly
because of a typo in WebPage::removeOverlay(). Also convert said method
to early return style.

Debug build fixes contributed by Ming Xie.

* Api/WebOverlay.cpp:
(BlackBerry::WebKit::WebOverlay::addAnimation):
(BlackBerry::WebKit::WebOverlay::setContentsToImage):
(WebKit):
(BlackBerry::WebKit::WebOverlay::setContentsToColor):
(BlackBerry::WebKit::WebOverlay::setDrawsContent):
(BlackBerry::WebKit::WebOverlay::invalidate):
(BlackBerry::WebKit::WebOverlay::setClient):
(BlackBerry::WebKit::WebOverlay::override):
(BlackBerry::WebKit::WebOverlay::resetOverrides):
* Api/WebOverlayOverride.cpp:
(BlackBerry::WebKit::WebOverlayOverride::WebOverlayOverride):
* Api/WebOverlay_p.h:
(BlackBerry::WebKit::WebOverlayPrivate::~WebOverlayPrivate):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::removeOverlay):
(BlackBerry::WebKit::WebPage::addCompositingThreadOverlay):
(BlackBerry::WebKit::WebPage::removeCompositingThreadOverlay):

Canonical link: https://commits.webkit.org/105588@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118850 268f45cc-cd09-0410-ab3c-d52691b4dbfc