Source/WebKit/blackberry/Api/WebOverlayOverride.cpp
@@ -86,7 +86,7 @@ void WebOverlayOverride::removeAnimation(const WebString& name)
 namespace BlackBerry {
 namespace WebKit {
 
-WebOverlayOverride::WebOverlayOverride(WebOverlayPrivate*)
+WebOverlayOverride::WebOverlayOverride(WebOverlayPrivate*, bool)
 {
 }
 
